github/API_V3/slurm-187011.out
Traceback (most recent call last):
  File "commit_mine.py", line 32, in <module>
    from commit_guru.cas_manager_v1 import *
  File "/home/smajumd3/Data_Miner/github/API_V3/commit_guru/cas_manager_v1.py", line 9, in <module>
    from commit_guru.analyzer.analyzer import *
  File "/home/smajumd3/Data_Miner/github/API_V3/commit_guru/analyzer/analyzer.py", line 54
    print(os.getcwd())
                     ^
IndentationError: unindent does not match any outer indentation level
